--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -35,33 +35,13 @@
                     <AuthorizeView Roles="DOCTOR" Context="DoctorView">
                         <Authorized>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="notes">
+                                <NavLink class="nav-link" href="@("notes/" + UUID)">
                                     <span class="oi oi-document" aria-hidden="true"></span> Notes
                                 </NavLink>
                             </div>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="prescriptions">
-                                    <span class="oi oi-script" aria-hidden="true"></span> Prescriptions
-                                </NavLink>
-                            </div>
-                            <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="my_patients">
+                                <NavLink class="nav-link" href="@("my_patients/" + UUID)">
                                     <span class="oi oi-people" aria-hidden="true"></span> Patients
-                                </NavLink>
-                            </div>
-                            <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="my_schedule">
-                                    <span class="oi oi-calendar" aria-hidden="true"></span> Schedule
-                                </NavLink>
-                            </div>
-                            <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="requests">
-                                    <span class="oi oi-bell" aria-hidden="true"></span> Requests
-                                </NavLink>
-                            </div>
-                            <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="report">
-                                    <span class="oi oi-bullhorn" aria-hidden="true"></span> Report
                                 </NavLink>
                             </div>
                         </Authorized>
@@ -69,13 +49,17 @@
                     <AuthorizeView Roles="PATIENT" Context="PatientView">
                         <Authorized>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="@("prescriptions/" + UUID)">
-                                    <span class="oi oi-script" aria-hidden="true"></span> My Prescriptions
-                                </NavLink>
-                            </div>
-                            <div class="nav-item px-3 col-12">
                                 <NavLink class="nav-link" href="@("my_doctor/" + UUID)">
                                     <span class="medical-icon-i-care-staff-area pe-3" style="font-size: 1.25rem" aria-hidden="true"> </span> My Doctor
+                                </NavLink>
+                            </div>
+                        </Authorized>
+                    </AuthorizeView>
+                    <AuthorizeView Roles="DOCTOR, PATIENT" Context="DoctorPatientView">
+                        <Authorized>
+                            <div class="nav-item px-3 col-12">
+                                <NavLink class="nav-link" href="@("my_prescriptions/" + UUID)">
+                                    <span class="oi oi-script" aria-hidden="true"></span> My Prescriptions
                                 </NavLink>
                             </div>
                             <div class="nav-item px-3 col-12">
