--- a/Pages/Patient/PatientDetails.razor
+++ b/Pages/Patient/PatientDetails.razor
@@ -1,6 +1,11 @@
 ﻿@page "/patient_details/{UUID}"
+@using Blazored.LocalStorage;
 @using ClientWebApp.DTOs;
+@using ClientWebApp.Features;
+@using Microsoft.AspNetCore.Components.Authorization
+
 @inject HttpClient Client
+@inject ILocalStorageService localStorage
 
 <div class="container text-center justify-content-center align-items-center mt-5">
     <h1 class="display-4 mb-5">Patient details</h1>
@@ -64,68 +69,74 @@
 
             </div>
         </div>
-        <div class="row mb-4">
-            <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
-                <div class="card card-body bg-light h-100">
-                    <h5 class="card-title">Assigned doctor</h5>
-                    @if (patient.AssignedDoctor == null)
-                    {
-                        <p class="card-text">
-                            <strong>
-                                Not yet assigned
-                            </strong>
-                        </p>
-                        <div class="row justify-content-center">
-                            <div class="col-md-4 col-sm-12">
-                                <button class="btn btn-sm btn-primary w-100">
-                                    View
-                                </button>
-                            </div>
-                        </div>
-                    }
-                    else
-                    {
-                        <p class="card-text">
-                            <strong>
-                                @(patient.AssignedDoctor != null && patient.AssignedDoctor.UUID != Guid.Empty ? patient.AssignedDoctor.FirstName + " " + patient.AssignedDoctor.MiddleName.First() + ". " + patient.AssignedDoctor.LastName : "Not Assigned")
-                            </strong>
-                        </p>
-                        @if (patient.AssignedDoctor.UUID != Guid.Empty)
-                        {
-                            <div class="row justify-content-center">
-                                <div class="col-md-4 col-sm-12">
-                                    <a href="" class="btn btn-sm btn-primary w-100">
-                                        View
-                                    </a>
+        <AuthorizeView Roles="ADMINISTRATOR">
+            <Authorized>
+                <div class="row mb-4">
+                    <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
+                        <div class="card card-body bg-light h-100">
+                            <h5 class="card-title">Assigned doctor</h5>
+                            @if (patient.AssignedDoctor == null)
+                            {
+                                <p class="card-text">
+                                    <strong>
+                                        Not yet assigned
+                                    </strong>
+                                </p>
+                                <div class="row justify-content-center">
+                                    <div class="col-md-4 col-sm-12">
+                                        <button class="btn btn-sm btn-primary w-100">
+                                            View
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
-                        }
-                    }
+                            }
+                            else
+                            {
+                                <p class="card-text">
+                                    <strong>
+                                        @(patient.AssignedDoctor != null && patient.AssignedDoctor.UUID != Guid.Empty ? patient.AssignedDoctor.FirstName + " " + patient.AssignedDoctor.MiddleName.First() + ". " + patient.AssignedDoctor.LastName : "Not Assigned")
+                                    </strong>
+                                </p>
+                                @if (patient.AssignedDoctor.UUID != Guid.Empty)
+                                {
+                                    <div class="row justify-content-center">
+                                        <div class="col-md-4 col-sm-12">
+                                            <a href="" class="btn btn-sm btn-primary w-100">
+                                                View
+                                            </a>
+                                        </div>
+                                    </div>
+                                }
+                            }
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col-12 mb-md-0 mb-sm-3">
-                <div class="card card-body bg-light h-100">
-                    <h5 class="card-title">Username</h5>
-                    <p class="card-text"><strong>@(patient.Username)</strong></p>
+                <div class="row mb-4">
+                    <div class="col-12 mb-md-0 mb-sm-3">
+                        <div class="card card-body bg-light h-100">
+                            <h5 class="card-title">Username</h5>
+                            <p class="card-text"><strong>@(patient.Username)</strong></p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <div class="card card-body bg-light h-100">
-                    <h5 class="card-title">Account status</h5>
-                    <p class="card-text"><strong>@(patient.IsDisabled ? "Disabled" : patient.IsExpired ? "Expired password" : "Active")</strong></p>
+                <div class="row mb-4">
+                    <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                        <div class="card card-body bg-light h-100">
+                            <h5 class="card-title">Account status</h5>
+                            <p class="card-text"><strong>@(patient.IsDisabled ? "Disabled" : patient.IsExpired ? "Expired password" : "Active")</strong></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                        <div class="card card-body bg-light h-100">
+                            <h5 class="card-title">Password expiry date and time</h5>
+                            <p class="card-text"><strong>@patient.PasswordExpiryDate</strong></p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <div class="card card-body bg-light h-100">
-                    <h5 class="card-title">Password expiry date and time</h5>
-                    <p class="card-text"><strong>@patient.PasswordExpiryDate</strong></p>
-                </div>
-            </div>
-        </div>
+            </Authorized>
+        </AuthorizeView>
+        
+        
         <div class="row mb-4">
             <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
                 <div class="card card-body bg-light h-100">
@@ -142,26 +153,44 @@
                 </div>
             </div>
         </div>
-        <div class="row mb-4">
-            <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
-                <div class="card card-body bg-light h-100">
-                    <h5 class="card-title">Unique identifier</h5>
-                    <p class="card-text"><strong>@patient.UUID</strong></p>
+        <AuthorizeView Roles="ADMINISTRATOR">
+            <Authorized>
+                <div class="row mb-4">
+                    <div class="col-md-12 col-sm-12 mb-md-0 mb-sm-3">
+                        <div class="card card-body bg-light h-100">
+                            <h5 class="card-title">Unique identifier</h5>
+                            <p class="card-text"><strong>@patient.UUID</strong></p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <a href="edit_patient/@(patient.UUID)" class="btn btn-lg btn-warning w-100">
-                    Edit
-                </a>
-            </div>
-            <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                <a href="print_patient_details/@(patient.UUID)" class="btn btn-lg btn-secondary w-100">
-                    Print
-                </a>
-            </div>
-        </div>
+            </Authorized>
+        </AuthorizeView>
+        <AuthorizeView Roles="ADMINISTRATOR">
+            <Authorized>
+                <div class="row mb-4">
+                    <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                        <a href="edit_patient/@(patient.UUID)" class="btn btn-lg btn-warning w-100">
+                            Edit
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
+                        <a href="patients" class="btn btn-lg btn-secondary w-100">
+                            Back
+                        </a>
+                    </div>
+                </div>
+            </Authorized>
+            <NotAuthorized>
+                <div class="row mb-4">
+                    <div class="col-12">
+                        <a href="@("my_patients/" + JTI)" class="btn btn-lg btn-secondary w-100">
+                            Back
+                        </a>
+                    </div>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
+        
     }
 </div>
 
@@ -171,8 +200,15 @@
 
     public PatientDetailsDTO? patient;
 
+    private string JTI;
+
     protected override async Task OnInitializedAsync()
     {
+        var token = await localStorage.GetItemAsStringAsync("token");
+        var claims = JwtParser.ParseClaimsFromJwt(token);
+
+        JTI = claims.Single(c => c.Type.Equals("jti")).Value;
+
         //var result = await Client.GetAsync("api/users/patients/all/basic");
         patient = await Client.GetFromJsonAsync<PatientDetailsDTO>("api/users/patients/" + UUID);
     }
